--- a/data-bgx/etc/validator.toml
+++ b/data-bgx/etc/validator.toml
@@ -52,7 +52,8 @@ endpoint = "tcp://validator:8800"
 peers = ["tcp://validator-bgx-2:8801","tcp://validator-bgx-3:8802"]
 
 # The type of scheduler to use. The choices are 'serial' or 'parallel'.
-scheduler = 'serial'
+#scheduler = 'serial'
+scheduler = 'parallel'
 #database  = 'uri://admin:foo@orientdb:2424/blocks'
 # A Curve ZMQ key pair are used to create a secured network based on side-band
 # sharing of a single network key pair to all participating nodes.
