--- a/data-bgx2/etc/validator.toml
+++ b/data-bgx2/etc/validator.toml
@@ -52,8 +52,8 @@ endpoint = "tcp://validator-bgx-2:8801"
  peers = ["tcp://validator-bgx:8800","tcp://validator-bgx-3:8802"]
 
 # The type of scheduler to use. The choices are 'serial' or 'parallel'.
-scheduler = 'serial'
-
+#scheduler = 'serial'
+scheduler = 'parallel'
 # A Curve ZMQ key pair are used to create a secured network based on side-band
 # sharing of a single network key pair to all participating nodes.
 # Note if the config file does not exist or these are not set, the network
