--- a/bgx/validator-bgx/Dockerfile-bionic
+++ b/bgx/validator-bgx/Dockerfile-bionic
@@ -51,7 +51,7 @@ RUN apt-get install -y -q \
     python3-toml \
     python3-yaml \
     python3-zmq \
-    unzip  iputils-ping
+    unzip  
 
 
 RUN curl -OLsS https://github.com/google/protobuf/releases/download/v3.5.1/protoc-3.5.1-linux-x86_64.zip \
