--- a/bgx/docker/docker-compose-net2-bgx-val-pbft-aws1.yaml
+++ b/bgx/docker/docker-compose-net2-bgx-val-pbft-aws1.yaml
@@ -121,7 +121,7 @@ services:
       - ../..:/project/${BGX_TOP}
     container_name: smart-bgt-tp-python-bgx2
     depends_on:
-      - validator-bgx
+      - validator-bgx-2
     command: |
       bash -c "
         bgx/bin/protogen
