--- a/bgx/families/bgt_python/Dockerfile-bionic
+++ b/bgx/families/bgt_python/Dockerfile-bionic
@@ -41,8 +41,8 @@ RUN apt-get install -y -q \
     python3-colorlog \
     python3-toml \
     python3-yaml \
-    python3-zmq python3-secp256k1 \
-    iputils-ping
+    python3-zmq \
+    python3-secp256k1  	    
 
 RUN mkdir -p /var/log/sawtooth
 
