--- a/bgx/families/bgt_python/Dockerfile-bionic
+++ b/bgx/families/bgt_python/Dockerfile-bionic
@@ -34,15 +34,18 @@ RUN apt-get install -y -q \
 RUN apt-get install -y -q \
     python3-grpcio \
     python3-grpcio-tools \
-    python3-protobuf
+    python3-protobuf 
+
+RUN apt-get update && apt-get install -y -q  libzmq5
 
 RUN apt-get install -y -q \
     python3-cbor \
     python3-colorlog \
     python3-toml \
     python3-yaml \
-    python3-zmq \
-    python3-secp256k1  	    
+    python3-zmq   \
+    python3-secp256k1 
+     	    
 
 RUN mkdir -p /var/log/sawtooth
 
