--- a/data-bgx1/etc/validator.toml.example
+++ b/data-bgx1/etc/validator.toml.example
@@ -27,9 +27,9 @@
 # of strings in the format "option:endpoint", where the options are currently
 # network and component.
 bind = [
-  "network:tcp://validator-bgx-2:8801",
-  "component:tcp://127.0.0.1:4006",
-  "consensus:tcp://127.0.0.1:5051"
+  "network:tcp://127.0.0.1:8800",
+  "component:tcp://127.0.0.1:4004",
+  "consensus:tcp://127.0.0.1:5050"
 ]
 
 # The type of peering approach the validator should take. Choices are 'static'
@@ -40,7 +40,7 @@ bind = [
 peering = "static"
 
 # Advertised network endpoint URL.
-endpoint = "tcp://validator-bgx-2:8801"
+endpoint = "tcp://127.0.0.1:8800"
 
 # Uri(s) to connect to in order to initially connect to the validator network,
 # in the format tcp://hostname:port. This is not needed in static peering mode
@@ -49,17 +49,17 @@ endpoint = "tcp://validator-bgx-2:8801"
 
 # A list of peers to attempt to connect to in the format tcp://hostname:port.
 # It defaults to None. Replace host1 with the peer's hostname or IP address.
- peers = ["tcp://validator-bgx-1:8800","tcp://validator-bgx-3:8802","tcp://validator-bgx-4:8803"]
+# peers = ["tcp://host1:8800"]
 
 # The type of scheduler to use. The choices are 'serial' or 'parallel'.
-#scheduler = 'serial'
-scheduler = 'parallel'
+scheduler = 'serial'
+
 # A Curve ZMQ key pair are used to create a secured network based on side-band
 # sharing of a single network key pair to all participating nodes.
 # Note if the config file does not exist or these are not set, the network
 # will default to being insecure.
-#network_public_key = 'wFMwoOt>yFqI/ek.G[tfMMILHWw#vXB[Sv}>l>i)'
-#network_private_key = 'r&oJ5aQDj4+V]p2:Lz70Eu0x#m%IwzBdP(}&hWM*'
+network_public_key = 'wFMwoOt>yFqI/ek.G[tfMMILHWw#vXB[Sv}>l>i)'
+network_private_key = 'r&oJ5aQDj4+V]p2:Lz70Eu0x#m%IwzBdP(}&hWM*'
 
 # The minimum number of peers required before stopping peer search.
 minimum_peer_connectivity = 3
@@ -67,8 +67,6 @@ minimum_peer_connectivity = 3
 # The maximum number of peers that will be accepted.
 maximum_peer_connectivity = 10
 
-# DAG branches 
-max_dag_branch=6
 # The host and port for Open TSDB database used for metrics
 # opentsdb_url = ""
 
@@ -83,8 +81,8 @@ max_dag_branch=6
 # roles on the network. The different supported authorization types are "trust"
 # and "challenge". The default is "trust".
 
- [roles]
- network = "trust"
+# [roles]
+# network = "trust"
 
 # Any off-chain transactor permission roles. The roles should match the roles
 # stored in state for transactor permissioning. Due to the roles having . in the
