--- a/bgx/docker/docker-compose-net-bgx-val-pbft.yaml
+++ b/bgx/docker/docker-compose-net-bgx-val-pbft.yaml
@@ -12,13 +12,13 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-# FOR BGX VALIDATOR with DAG but without Rust (project validator-bgx)
+# FOR BGX VALIDATOR with DAG but without Rust (project validator-bgx-1)
 # 
 version: '3.6'
 
 services:
 
-  settings-tp:
+  settings-tp-1:
     build:
       context: ../..
       dockerfile: bgx/docker/settings/Dockerfile-${DISTR}
@@ -27,26 +27,26 @@ services:
         - https_proxy
         - no_proxy
         - BGX_TOP=bgx
-    image: sawtooth-settings-tp-bgx:${ISOLATION_ID}
+    image: sawtooth-settings-tp-bgx-1:${ISOLATION_ID}
     networks: 
     - network1
     environment:
-    - SAWTOOTH_HOME=/project/${BGX_TOP}/data-bgx
+    - SAWTOOTH_HOME=/project/${BGX_TOP}/data-bgx1
     volumes:
       - ../..:/project/${BGX_TOP}
-    container_name: sawtooth-settings-tp-bgx
+    container_name: sawtooth-settings-tp-bgx-1
     depends_on:
-      - validator-bgx
+      - validator-bgx-1
     command: |
       bash -c "
         cd families/settings
         python3 setup.py clean --all
         python3 setup.py build
-        settings-tp -vv -C tcp://validator-bgx:4004
+        settings-tp -vv -C tcp://validator-bgx-1:4004
       "
     stop_signal: SIGKILL
 
-  bgt-tp-python:
+  bgt-tp-python-1:
     build:
       context: ../..
       dockerfile: bgx/families/bgt_python/Dockerfile-${DISTR}
@@ -55,22 +55,22 @@ services:
         - https_proxy
         - no_proxy
         - BGX_TOP=bgx
-    image: bgt-tp-python-bgx:${ISOLATION_ID}
+    image: bgt-tp-python-bgx-1:${ISOLATION_ID}
     environment:
-    - SAWTOOTH_HOME=/project/${BGX_TOP}/data-bgx
+    - SAWTOOTH_HOME=/project/${BGX_TOP}/data-bgx1
     networks:
     - network1
     volumes:
       - ../..:/project/${BGX_TOP}
-    container_name: bgt-tp-python-bgx
+    container_name: bgt-tp-python-bgx-1
     depends_on:
-      - validator-bgx
+      - validator-bgx-1
     command: |
       bash -c "
         cd bgx/families/bgt_python
         python3 setup.py clean --all
         python3 setup.py build
-        bgt-tp-python -vv -C tcp://validator-bgx:4004
+        bgt-tp-python -vv -C tcp://validator-bgx-1:4004
       "
     stop_signal: SIGKILL
 
@@ -92,13 +92,13 @@ services:
 #      - ../..:/project/${BGX_TOP}
 #    container_name: bgt-tp1-python-bgx
 #    depends_on:
-#      - validator-bgx
+#      - validator-bgx-1
 #    command: |
 #      bash -c "
 #        cd bgx/families/bgt_python
 #        python3 setup.py clean --all
 #        python3 setup.py build
-#        bgt-tp-python -vv -C tcp://validator-bgx:4004
+#        bgt-tp-python -vv -C tcp://validator-bgx-1:4004
 #      "
 #    stop_signal: SIGKILL
 
@@ -121,18 +121,18 @@ services:
 #      - ../..:/project/${BGX_TOP}
 #    container_name: bgx-validator-registry
 #    depends_on:
-#      - validator-bgx
+#      - validator-bgx-1
 #    command: |
 #      bash -c "
 #        cd bgx/families/bgx_validator_registry
 #        python3 setup.py clean --all
 #        python3 setup.py build
-#        bgx-validator-registry -vv -C tcp://validator-bgx:4004
+#        bgx-validator-registry -vv -C tcp://validator-bgx-1:4004
 #      "
 #    stop_signal: SIGKILL
 
 
-  smart-bgt-tp-python:
+  smart-bgt-tp-python-1:
     build:
       context: ../..
       dockerfile: bgx/families/smart_bgt_python/Dockerfile
@@ -141,28 +141,28 @@ services:
         - https_proxy
         - no_proxy
         - BGX_TOP=bgx
-    image: smart-bgt-tp-python-bgx:${ISOLATION_ID}
+    image: smart-bgt-tp-python-bgx-1:${ISOLATION_ID}
     environment:
-    - SAWTOOTH_HOME=/project/${BGX_TOP}/data-bgx
+    - SAWTOOTH_HOME=/project/${BGX_TOP}/data-bgx1
     networks:
     - network1
     volumes:
       - ../..:/project/${BGX_TOP}
-    container_name: smart-bgt-tp-python-bgx
+    container_name: smart-bgt-tp-python-bgx-1
     depends_on:
-      - validator-bgx
+      - validator-bgx-1
     command: |
       bash -c "
         cd bgx/families/smart_bgt_python
         python3 setup.py clean --all
         python3 setup.py build
-        ../../bin/smart-bgt-tp-python -vv -C tcp://validator-bgx:4004
+        ../../bin/smart-bgt-tp-python -vv -C tcp://validator-bgx-1:4004
       "
     stop_signal: SIGKILL
 
 
 
-  client:
+  client-1:
     build:
       context: ../..
       dockerfile: bgx/docker/sawtooth-shell-${DISTR}
@@ -171,16 +171,16 @@ services:
         - https_proxy
         - no_proxy
         - BGX_TOP=bgx
-    image: sawtooth-shell-bgx:${ISOLATION_ID}
+    image: sawtooth-shell-bgx-1:${ISOLATION_ID}
     networks:
     - network1
     environment:
-    - SAWTOOTH_HOME=/project/${BGX_TOP}/data-bgx
+    - SAWTOOTH_HOME=/project/${BGX_TOP}/data-bgx1
     volumes:
       - ../..:/project/${BGX_TOP}
-    container_name: sawtooth-shell-bgx
+    container_name: sawtooth-shell-bgx-1
     depends_on:
-      - validator-bgx
+      - validator-bgx-1
     command: |
       bash -c "
         sawtooth keygen --force &&
@@ -189,7 +189,7 @@ services:
     stop_signal: SIGKILL
 
 
-  validator-bgx:
+  validator-bgx-1:
     build:
       context: ../..
       dockerfile: bgx/validator-bgx/Dockerfile-${DISTR}
@@ -198,14 +198,14 @@ services:
         - https_proxy
         - no_proxy
         - BGX_TOP=bgx
-    image: validator-nbgx:${ISOLATION_ID}
+    image: validator-bgx-1:${ISOLATION_ID}
     networks:
     - network1
     environment:
-    - SAWTOOTH_HOME=/project/${BGX_TOP}/data-bgx
+    - SAWTOOTH_HOME=/project/${BGX_TOP}/data-bgx1
     volumes:
       - ../..:/project/${BGX_TOP}
-    container_name: validator-nbgx
+    container_name: validator-bgx-1
     expose:
       - 4004
       - 8800
@@ -217,7 +217,7 @@ services:
     command: |
       bash -c "
         bgx/bin/protogen
-        rm -f data-bgx/data/* data-bgx/logs/*.log*;
+        rm -f data-bgx1/data/* data-bgx1/logs/*.log*;
         cd bgx/validator-bgx
         python3 setup.py clean --all
         python3 setup.py build
@@ -228,14 +228,14 @@ services:
         sawset genesis -k /root/.sawtooth/keys/my_key.priv 
         sawadm genesis config-genesis.batch  sawset.batch
         validator-dbgx -vv  \
-            --endpoint tcp://validator-bgx:8800 \
+            --endpoint tcp://validator-bgx-1:8800 \
             --bind component:tcp://eth0:4004 \
             --bind network:tcp://eth0:8800 \
             --bind consensus:tcp://eth0:5050 \
       "
     stop_signal: SIGKILL
 
-  bgx-api:
+  bgx-api-1:
     build:
       context: ../..
       dockerfile: bgx/rest-api/Dockerfile-${DISTR}
@@ -244,24 +244,24 @@ services:
         - https_proxy
         - no_proxy
         - BGX_TOP=bgx
-    image: bgx-rest-api
+    image: bgx-rest-api-1
     environment:
-    - SAWTOOTH_HOME=/project/${BGX_TOP}/data-bgx
+    - SAWTOOTH_HOME=/project/${BGX_TOP}/data-bgx1
     volumes:
       - ../..:/project/${BGX_TOP}
-    container_name: bgx-api
+    container_name: bgx-api-1
     networks:
     - network1
     ports:
       - "8008:8008" 
     depends_on:
-       - validator-bgx
+       - validator-bgx-1
     command: |
       bash -c "
         cd bgx/rest-api
         python3 setup.py clean --all
         python3 setup.py build
-        bgx-rest-api -vv --connect tcp://validator-bgx:4004 --bind bgx-api:8008
+        bgx-rest-api -vv --connect tcp://validator-bgx-1:4004 --bind bgx-api-1:8008
       "
     stop_signal: SIGKILL
 
@@ -285,18 +285,18 @@ services:
 #    ports:
 #      - "8008:8008"
 #    depends_on:
-#      - validator-bgx
+#      - validator-bgx-1
 #    command: |
 #      bash -c "
 #        bgx/bin/protogen
 #        cd rest_api
 #        python3 setup.py clean --all
 #        python3 setup.py build
-#        sawtooth-rest-api -vv --connect tcp://validator-bgx:4004 --bind rest-api:8008
+#        sawtooth-rest-api -vv --connect tcp://validator-bgx-1:4004 --bind rest-api:8008
 #      "
 #    stop_signal: SIGKILL
 
-  bgx-pbft:
+  bgx-pbft-1:
     build:
       context: ../..
       dockerfile: bgx/consensus/bgx_pbft/Dockerfile-${DISTR}
@@ -305,23 +305,23 @@ services:
         - https_proxy
         - no_proxy
         - BGX_TOP=bgx
-    image: bgx-pbft-python:${ISOLATION_ID}
+    image: bgx-pbft-python-1:${ISOLATION_ID}
     networks:
     - network1
     environment:
     - SAWTOOTH_HOME=/project/${BGX_TOP}/data-bgx
     volumes:
       - ../..:/project/${BGX_TOP}
-    container_name: bgx-pbft-python
+    container_name: bgx-pbft-python-1
     depends_on:
-      - validator-bgx
+      - validator-bgx-1
     #  - bgx-registry
     command: |
       bash -c "
         cd bgx/consensus/bgx_pbft
         python3 setup.py clean --all
         python3 setup.py build
-        bgx-pbft -vv --connect tcp://validator-bgx:5050 --component tcp://validator-bgx:4004
+        bgx-pbft -vv --connect tcp://validator-bgx-1:5050 --component tcp://validator-bgx-1:4004
       "
     stop_signal: SIGKILL
 
@@ -344,18 +344,18 @@ services:
 #     - ../..:/project/${BGX_TOP}
 #   container_name: devmode-python-bgx
 #   depends_on:
-#     - validator-bgx
+#     - validator-bgx-1
 #   command: |
 #     bash -c "
 #       cd bgx/consensus/devmode_python
 #       python3 setup.py clean --all
 #       python3 setup.py build
-#       devmode-python -vv --connect tcp://validator-bgx:5050 --component tcp://validator-bgx:4004
+#       devmode-python -vv --connect tcp://validator-bgx-1:5050 --component tcp://validator-bgx-1:4004
 #     "
 #   stop_signal: SIGKILL
 #
 
 networks:
   network1:
-     name: bgx-network
+     name: bgx1-network
   
