--- a/bgx/docker/docker-compose-net3-bgx-val-pbft.yaml
+++ b/bgx/docker/docker-compose-net3-bgx-val-pbft.yaml
@@ -170,14 +170,14 @@ services:
         - https_proxy
         - no_proxy
         - BGX_TOP=bgx
-    image: validator-nbgx-3:${ISOLATION_ID}
+    image: validator-bgx-3:${ISOLATION_ID}
     networks:
     - network1
     environment:
     - SAWTOOTH_HOME=/project/${BGX_TOP}/data-bgx3
     volumes:
       - ../..:/project/${BGX_TOP}
-    container_name: validator-nbgx-3
+    container_name: validator-bgx-3
     expose:
       - 4008
       - 8802
@@ -298,5 +298,6 @@ services:
 
 networks:
   network1:
-     name: bgx3-network
+    external:
+     name: bgx1-network
   
