--- a/bgx/docker/docker-compose-netN-bgx-val-pbft.yaml
+++ b/bgx/docker/docker-compose-netN-bgx-val-pbft.yaml
@@ -298,8 +298,8 @@ services:
 
 networks:
   network1:
-     name: bgx${N}-network
-
+     name: bgx1-network
+#name: bgx${N}-network
 #        driver: default
 #        config:
 #          - subnet: "172.16.32.0/24"
