--- a/bgx/docker/docker-compose-net2-bgx-val-pbft.yaml
+++ b/bgx/docker/docker-compose-net2-bgx-val-pbft.yaml
@@ -39,7 +39,7 @@ services:
       - validator-bgx-2
     command: |
       bash -c "
-        cd families/settings
+        cd bgx/families/settings
         python3 setup.py clean --all
         python3 setup.py build
         settings-tp -vv -C tcp://validator-bgx-2:4006
