--- a/bgx/docker/settings/Dockerfile-bionic
+++ b/bgx/docker/settings/Dockerfile-bionic
@@ -48,7 +48,7 @@ RUN apt-get install -y -q --allow-downgrades \
 # && rm protoc-3.5.1-linux-x86_64.zip
 
 
-ENV PATH=$PATH:/project/$BGX_TOP/BGX/bin:/project/$BGX_TOP/bin:/protoc3/bin
+ENV PATH=$PATH:/project/$BGX_TOP/bgx/bin:/project/$BGX_TOP/bin:/protoc3/bin
 
 WORKDIR /project/$BGX_TOP
 
