--- a/bgx/docker/docker-compose-netN-bgx-val-pbft.yaml
+++ b/bgx/docker/docker-compose-netN-bgx-val-pbft.yaml
@@ -27,14 +27,14 @@ services:
         - https_proxy
         - no_proxy
         - BGX_TOP=bgx
-    image: sawtooth-settings-tp-bgx-${N}:${ISOLATION_ID}
+    image: bgx-settings-tp-bgx-${N}:${ISOLATION_ID}
     networks: 
     - network1
     environment:
     - SAWTOOTH_HOME=/project/${BGX_TOP}/data-bgx${N}
     volumes:
       - ../..:/project/${BGX_TOP}
-    container_name: sawtooth-settings-tp-bgx-${N}
+    container_name: bgx-settings-tp-bgx-${N}
     depends_on:
       - validator-bgx
     command: |
