--- a/data-bgx1/etc/validator.toml
+++ b/data-bgx1/etc/validator.toml
@@ -15,7 +15,7 @@
 # ------------------------------------------------------------------------------
 
 #
-# Sawtooth -- Validator Configuration
+# bgx -- Validator Configuration
 #
 
 # This file should exist in the defined config directory and allows
