--- a/bgx/docker/docker-compose-net1-bgx-val-pbft.yaml
+++ b/bgx/docker/docker-compose-net1-bgx-val-pbft.yaml
@@ -229,7 +229,7 @@ services:
         sawadm genesis config-genesis.batch  sawset.batch
         validator-dbgx -vv  \
             --endpoint tcp://validator-bgx-1:8800 \
-            --bind component:tcp://validator-bgx-1:4004 \
+            --bind component:tcp://eth0:4004 \
             --bind network:tcp://eth0:8800 \
             --bind consensus:tcp://eth0:5050 \
       "
