--- a/bgx/docker/docker-compose-netN-bgx-val-pbft.yaml
+++ b/bgx/docker/docker-compose-netN-bgx-val-pbft.yaml
@@ -202,7 +202,7 @@ services:
             --endpoint tcp://validator-bgx-${N}:${NET} \
             --bind component:tcp://eth0:${COMP} \
             --bind network:tcp://eth0:${NET} \
-            --bind consensus:tcp://eth0:${CONS} \
+            --bind consensus:tcp://eth0:${CONS} --max_dag_branch 6 \
       "
     stop_signal: SIGKILL
 
