--- a/bgx/docker/docker-compose-netN-bgx-val-pbft.yaml
+++ b/bgx/docker/docker-compose-netN-bgx-val-pbft.yaml
@@ -203,7 +203,7 @@ services:
             --bind component:tcp://eth0:${COMP} \
             --bind network:tcp://eth0:${NET} \
             --bind consensus:tcp://eth0:${CONS} \
-            --max_dag_branch 6 --scheduler parallel \
+            --max_dag_branch 6 --scheduler parallel --maximum-peer-connectivity 70 \
       "
     stop_signal: SIGKILL
 
