--- a/bgx/dashboard/Dockerfile-bionic
+++ b/bgx/dashboard/Dockerfile-bionic
@@ -18,9 +18,7 @@
 
 FROM ubuntu:bionic
 ARG BGX_TOP
-RUN apt-get update \
- && apt-get install gnupg -y
-
+RUN apt-get update && apt-get install gnupg -y
 RUN echo "deb http://repo.sawtooth.me/ubuntu/ci bionic universe" >> /etc/apt/sources.list \
  && (apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 8AA7AF1F1091A5FD \
  || apt-key adv --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys 8AA7AF1F1091A5FD) \
