--- a/clusters/c4/bgx6/etc/validator.toml
+++ b/clusters/c4/bgx6/etc/validator.toml
@@ -40,7 +40,7 @@ bind = [
 peering = "static"
 
 # Advertised network endpoint URL.
-endpoint = "tcp://validator-bgx-6:8803"
+endpoint = "tcp://validator-bgx-c4-6:8406"
 
 # Uri(s) to connect to in order to initially connect to the validator network,
 # in the format tcp://hostname:port. This is not needed in static peering mode
@@ -49,7 +49,7 @@ endpoint = "tcp://validator-bgx-6:8803"
 
 # A list of peers to attempt to connect to in the format tcp://hostname:port.
 # It defaults to None. Replace host1 with the peer's hostname or IP address.
-peers = ["tcp://validator-bgx-1:8800","tcp://validator-bgx-2:8801","tcp://validator-bgx-3:8802","tcp://validator-bgx-4:8803","tcp://validator-bgx-5:8804"]
+peers = ["tcp://validator-bgx-c1-1:8101","tcp://validator-bgx-c4-1:8401","tcp://validator-bgx-c4-2:8402","tcp://validator-bgx-c4-4:8404","tcp://validator-bgx-c4-5:8405","tcp://validator-bgx-c4-3:8403"]
 
 # The type of scheduler to use. The choices are 'serial' or 'parallel'.
 scheduler = 'parallel'
