--- a/clusters/c1/bgx1/etc/validator.toml
+++ b/clusters/c1/bgx1/etc/validator.toml
@@ -70,7 +70,7 @@ maximum_peer_connectivity = 10
 # DAG branches 
 max_dag_branch=6
 # The host and port for Open TSDB database used for metrics
-opentsdb_url = "http://localhost:8086"
+opentsdb_url = "http://bgx-stats-influxdb:8086"
 
 # The name of the database used for storing metrics
 opentsdb_db = "metrics"
