--- a/grafana.yml
+++ b/grafana.yml
@@ -2,6 +2,9 @@ version: '3.6'
 
 services:
   influxdb:
+    build:
+      context: ./
+      dockerfile: bgx/docker/grafana/bgx-stats-influxdb
     image: influxdb
     container_name: bgx-stats-influxdb
     networks:
