fix bgx data into grafana

--- a/bgx/etc/grafana/grafana.ini
+++ b/bgx/etc/grafana/grafana.ini
@@ -367,7 +367,7 @@
 ;exchange = grafana_events
 
 ;#################################### Dashboard JSON files ##########################
-[dashboards.json]
+[bgx-dashboards.json]
 enabled = true
 path = /etc/grafana/dashboards
 
