fix bgx in keep blocks mode

--- a/bgx/docker/docker-compose-netCN-bgx-val-pbft.yaml
+++ b/bgx/docker/docker-compose-netCN-bgx-val-pbft.yaml
@@ -189,7 +189,7 @@ services:
     command: |
       bash -c "
         bgx/bin/protogen
-        rm -f clusters/${C}/bgx${N}/data/*;rm -f clusters/${C}/bgx${N}/logs/*.log*;
+        echo rm -f clusters/${C}/bgx${N}/data/*;rm -f clusters/${C}/bgx${N}/logs/*.log*;
         cd bgx/validator-bgx
         python3 setup.py clean --all
         python3 setup.py build
@@ -197,7 +197,7 @@ services:
         sawtooth keygen my_key
         sawset proposal create -k /root/.sawtooth/keys/my_key.priv -o sawset.batch $$(cat ../../bgx/etc/bgx_val.conf)
         sawset genesis -k /root/.sawtooth/keys/my_key.priv -A $$(cat ../../clusters/${C}/bgx${N}/keys/validator.pub)
-        sawadm genesis config-genesis.batch  sawset.batch
+        echo sawadm genesis config-genesis.batch  sawset.batch
         validator-dbgx -vv  \
             --endpoint tcp://validator-bgx-${C}-${N}:${NET} \
             --bind component:tcp://eth0:${COMP} \
