--- a/bgx/docker/docker-compose-netCN-bgx-val-pbft.yaml
+++ b/bgx/docker/docker-compose-netCN-bgx-val-pbft.yaml
@@ -137,7 +137,7 @@ services:
   client:
     build:
       context: ../..
-      dockerfile: bgx/docker/sawtooth-shell-${DISTR}
+      dockerfile: bgx/docker/bgx-shell-${DISTR}
       args:
         - http_proxy
         - https_proxy
