--- a/bgx/validator-bgx/Dockerfile-bionic
+++ b/bgx/validator-bgx/Dockerfile-bionic
@@ -26,8 +26,10 @@ RUN echo "deb http://repo.sawtooth.me/ubuntu/ci bionic universe" >> /etc/apt/sou
  || apt-key adv --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys 8AA7AF1F1091A5FD) \
  && apt-get update
 
-RUN apt-get install -y -q \
+RUN apt-get update && apt-get install -y -q \
     git \
+    iputils-ping\
+    net-tools\
     python3 \
     python3-stdeb
 
